<resources>
    <string name="app_name">Meal Planner Final</string>
    <string name="meal_master">Meal Master</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="logo">Logo</string>
    <string name="signin">SIGN IN</string>
    <string name="forgotpass">FORGOT PASSWORD</string>
    <string name="signup">SIGN UP</string>
    <string name="a_tiny_android_icon">A tiny Android icon</string>
    <string name="search_button_on_the_toolbar">search button on the toolbar</string>
    <string name="home">Home</string>
    <string name="my_recipes">My Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="username_label">Username: %1$s</string>
    <string name="email_label">Email Id: %1$s</string>
    <string name="firstname_label">First Name: %1$s</string>
    <string name="lastname_label">Last Name: %1$s</string>
</resources>