<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.Menu">

    <Button
        android:id="@+id/home_button"
        android:layout_width="251dp"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:background="#00000000"
        android:backgroundTint="#F9F9F9"
        android:drawableStart="@drawable/baseline_home_24"
        android:drawablePadding="4dp"
        android:foregroundTint="#F9F9F9"
        android:text="@string/home"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="560dp"
        android:background="#00000000"
        android:backgroundTint="#F9F9F9"
        android:drawableStart="@drawable/baseline_settings_24"
        android:drawablePadding="4dp"
        android:foregroundTint="#F9F9F9"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="269dp"
        android:layout_height="61dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="468dp"
        android:background="#00000000"
        android:backgroundTint="#F9F9F9"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="4dp"
        android:foregroundTint="#F9F9F9"
        android:text="@string/profile"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shoplist_button"
        android:layout_width="288dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="276dp"
        android:background="#00000000"
        android:backgroundTint="#F9F9F9"
        android:drawableStart="@drawable/baseline_shopping_cart_24"
        android:drawablePadding="4dp"
        android:foregroundTint="#F9F9F9"
        android:text="@string/shopping_list"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/my_mp_button"
        android:layout_width="289dp"
        android:layout_height="59dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="376dp"
        android:background="#00000000"
        android:backgroundTint="#F9F9F9"
        android:drawableStart="@drawable/baseline_today_24"
        android:drawablePadding="4dp"
        android:foregroundTint="#F9F9F9"
        android:text="My Meal Plans"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/my_recipes_button"
        android:layout_width="226dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="184dp"
        android:background="#00000000"
        android:backgroundTint="#F9F9F9"
        android:drawableStart="@drawable/baseline_menu_book_24"
        android:drawablePadding="4dp"
        android:foregroundTint="#F9F9F9"
        android:text="@string/my_recipes"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>